Adjusted Code
Adjusted code to better suit the requirements of the coursework. API's UI now includes all necessary endpoints to create instances of the database's tables. Will debug functionality later.
