# comp2001_flask_microservice/flaskMain.py
@@ -2,15 +2,17 @@
 
 from flask import render_template
 import config
-from models import Person
+from models import Trail, Feature, User
 
 app = config.connex_app
 app.add_api(config.basedir / "swagger.yml")
 
 @app.route("/")
 def home():
-    people = Person.query.all()
-    return render_template("home.html", people=people)
+    trails = Trail.query.all()
+    features = Feature.query.all()
+    users = User.query.all()
+    return render_template("home.html", trails=trails, features=features, users=users)
 
 if __name__ == "__main__":
     app.run(host="0.0.0.0", port=8000, debug=True)
